versão e exclusão de arquivos e inserção de imagem no pubseckyamal

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -90,6 +90,7 @@ flutter:
     - assets/images/cuzcuzdelegumes.jpg
     - assets/images/escondidinhovegetariano.jpg
     - assets/images/moquecadebanana.jpg
+    - assets/images/perfil.jpg
 
   fonts:
     - family: COOPBL
