--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,10 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  firebase_core: ^2.27.0
+  firebase_auth: ^4.17.3
+  google_sign_in: ^6.2.1
+  shared_preferences: ^2.2.2
   flutter:
     sdk: flutter
 
